<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:fragment="com.islamic.prayer_times.activities.SettingsActivity$GeneralPreferenceFragment"
        android:title="@string/pref_header_general"
        android:icon="@drawable/ic_info_black_24dp"
        android:key="@string/settings_general_key"
         />

    <Preference
        android:fragment="com.islamic.prayer_times.activities.SettingsActivity$LocationsPreferenceFragment"
        android:title="@string/pref_header_locations"
        android:icon="@drawable/ic_locations_black_24dp"
        android:key="@string/settings_location_key"


        />

    <Preference
        android:fragment="com.islamic.prayer_times.activities.SettingsActivity$NotificationPreferenceFragment"
        android:title="@string/pref_header_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
         android:key="@string/settings_notifications_key"
        />

</PreferenceScreen>